syntax = "proto3";

option go_package = "github.com/dislinked";

import "google/api/annotations.proto";

service AuthenticationService{
  rpc Login(LoginRequest) returns(Token) {
    option (google.api.http) = {
      post: "/login"
      body: "credentials"
    };
  }
  rpc Register(RegisterRequest) returns(RegisterResponse) {
    option (google.api.http) = {
      post: "/register"
      body: "user"
    };
  }
  rpc IsAuthorized(AuthorizationRequest) returns(AuthorizationResponse) {
    option (google.api.http) = {
      post: "/is-authorized"
      body: "token"
    };
  }
}

message Credentials {
	string username = 1;
	string password = 2;
}

enum GenderAuth{
	OtherAuth = 0;
	MaleAuth = 1;
	FemaleAuth = 2;
}

enum UserRoleAuth{
	RegularAuth = 0;
	AdminAuth = 1;
	AgentAuth = 2;
}

message UserAuth {
	string id = 1;
	string username = 2;
	string name = 3;
	string surname = 4;
	string email = 5;
	GenderAuth gender = 6;
	UserRoleAuth role = 7;
	string dateOfBirth = 8;
	string password = 9;
	bool Public = 10;
	string contactPhone = 11;
}



message Token {
  string role        = 1;
  string username    = 2;
  string token = 3;
}

message LoginRequest {
  Credentials credentials = 1;
}

message RegisterRequest {
  UserAuth user = 1;
}

message RegisterResponse {
  string username = 1;
	int64 status = 2;
	string error = 3;
	string userID = 4;
}

message AuthorizationRequest {
  Token token = 1;
}

message AuthorizationResponse {
}